# sharewel-alert

./: .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: sharewell-alert.yml
sharewell_alert/: __init__.py  __main__.py  config.py  monitor.py
tests/: test_monitor.py
