[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sharewell-alert"
version = "0.1.0"
description = "Slack notifier for new ShareWel listings"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
sharewell-alert = "sharewell_alert.__main__:main"
